2009-02-27  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window-stack.c (hildon_window_stack_push)
	(hildon_window_stack_pop_and_push):
	Don't forget to push/pop the first window.
	Reverse the window list before calling _push_list()

2009-02-27  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-picker-button.h
	* src/hildon-picker-button.c (hildon_picker_button_class_init):
	Remove "value_changed" slot to avoid ABI breakage

2009-02-26  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_realize),
	(hildon_pannable_area_unrealize),
	(hildon_pannable_draw_vscroll),
	(hildon_pannable_draw_hscroll): Changed the method to handle the
	GC used to draw the transparent scrollbar, this way we avoid
	creating the GC all the time when drawing the scrollbars.

2009-02-26  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_init),
	(hildon_pannable_area_remove): Removed some unnecessary casts.
	(hildon_pannable_area_dispose): Disconnected some signals before
	releasing the adjustments.

2009-02-26  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-edit-toolbar.c (hildon_edit_toolbar_init):
	Make sure that all widgets contained in the toolbar are shown.

2009-02-25  Alberto Garcia  <agarcia@igalia.com>

	* doc/hildon-sections.txt
	* src/hildon-picker-button.h
	* src/hildon-picker-button.c (+hildon_picker_button_value_changed)
	(_selection_changed, hildon_picker_button_on_dialog_response)
	(hildon_picker_button_class_init, hildon_picker_button_set_selector):
	New hildon_picker_button_value_changed() method.

	* src/Makefile.am
	* src/hildon-picker-button-private.h
	* src/hildon-picker-button.c (hildon_picker_button_init)
	(+hildon_picker_button_disable_value_changed): Add protected
	function for disabling the "value-changed" signal.

	* src/hildon-date-button.c (hildon_date_button_set_date):
	Don't emit "value-changed" for each one of the three columns.
